@@ -5,17 +5,14 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLConnection;
-import java.util.Random;
 import java.util.Timer;
 import java.util.TimerTask;
 import java.util.Vector;
 
 import oculusPrime.State.values;
 
-public class NetworkMonitor {
-
-	public static final long AP_TIME_OUT = 9000;
-	public static final long AP_PING_FAILS = 7;
+public class NetworkMonitor implements Observer {
+	
 	public static final String AP = "ap";
 
 	private static Vector<String> wlanData = new Vector<String>();
@@ -23,114 +20,115 @@ public class NetworkMonitor {
 	private static Vector<String> accesspoints = new Vector<String>();
 	private static Vector<String> networkData = new Vector<String>();
 	private static Vector<String> connections = new Vector<String>();
-	private static Vector<String> ignore = new Vector<String>();
 	private static long pingLast = System.currentTimeMillis();
+	private static long defaultLast = System.currentTimeMillis();
+	private static long apLast = System.currentTimeMillis();
 	private static Settings settings = Settings.getReference();
 	private static State state = State.getReference();	
 	private static Application application = null; 
-	private static boolean changingWIFI = false;	
-	private static boolean wiredConnection = false;
+	private static boolean wiredConnection = false;	
+	private static boolean changingWIFI = false;
 	private static Timer pingTimer = new Timer();
+	private static String currentUUID = null;
 	private static String pingValue = null;
 	private static String wdev = null;	
-	private static long scanLast = 0;
-	private static long uuidConnetionLast = 0;
-	private static int uuidConnetionAttempts = 0;
-	private static int failedConnetion = 0;
-	private static int apModeCounter = 0;
-	private static int pingCounter = 0;
-	private static int pingFails = 0;
-	
+	private static int adhocBusy = 0;
+	private static int uuidFail = 0;
+    private static int pingFail = 0;
+    
 	private static NetworkMonitor singleton = new NetworkMonitor();
 	public static void setApp(Application a) {application = a;}
 	public static NetworkMonitor getReference() {return singleton;}
 
 	private NetworkMonitor(){
+
 		updateExternalIPAddress();
 
-		if(state.equals(values.ssid, AP) && ! settings.readSetting(ManualSettings.defaultuuid).equals("none"))
-			changeUUID(settings.readSetting(ManualSettings.defaultuuid));
+		if(settings.getBoolean(ManualSettings.networkmonitor)){
 
-		if(settings.getBoolean(ManualSettings.networkmonitor)) {
-			pingTimer.schedule(new pingTask(), 1000, 1000);
-			new eventThread().start();
 			connectionUpdate();
 			runNetworkTool();
-			killApplet();
-		}
-	}
+			changeUUID(settings.readSetting(ManualSettings.defaultuuid));
+			pingTimer.schedule(new pingTask(), 2000, 2000);
+			new eventThread().start();
+			state.addObserver(this);
 
-	private void panicPings(){
-		
-		pingLast = System.currentTimeMillis();
-		
-		// ping and see if recovers, let Linux try other connections.. 
-		for(int i = 0 ; i < AP_PING_FAILS ; i++){
-			
-			pingValue = Util.pingWIFI(state.get(values.gateway));
-			if(pingValue == null) pingFails++;
-			else pingLast = System.currentTimeMillis();	
-			
-			if(i%3==0 && i > 3) {
-				Util.delay(1500);
-				// runNetworkTool();
-				changeUUID(settings.readSetting(ManualSettings.defaultuuid));
-			}
-			
-			if(state.exists(values.ssid)) {
-				// pingLast = System.currentTimeMillis();
-				Util.log("painic pings resolved.. ", this);
-				return;
-			}
-			
-			Util.delay(2000);
-		}
-		
-		if(pingFails >= AP_PING_FAILS){
-			pingLast = System.currentTimeMillis();
-			pingCounter = 0;
-			pingFails = 0;
-			startAdhoc();
 		}
 	}
 	
-	private class pingTask extends TimerTask {			
-	    @Override
+	@Override
+	public void updated(String key) {
+		
+		if(key.equals(values.externaladdress.name())) 
+			if( ! state.exists(values.ethernetaddress))
+				updateExternalIPAddress();
+	
+		if(key.equals(values.ssid.name())) {
+			
+			pingFail = 0;
+			changingWIFI = false;
+			apLast = System.currentTimeMillis();
+			defaultLast = System.currentTimeMillis();
+			pingLast = System.currentTimeMillis(); 
+			
+			if( ! state.equals(values.ssid, AP) && ManualSettings.isDefault(ManualSettings.defaultuuid))
+				setDefault(state.get(values.ssid));
+			
+			if(state.exists(values.ssid)) currentUUID = lookupUUID(state.get(values.ssid));
+
+		}
+	}
+	
+	private class pingTask extends TimerTask {
+		@Override
 	    public void run() {
-	    	
-	    	if(state.equals(values.ssid, AP)) {
 	    		
-	    		if (application != null && ! state.getBoolean(State.values.autodocking)) 
+	    	// TODO: revisit && ! state.getBoolean(State.values.autodocking)) 
+	    	if(state.equals(values.ssid, AP) || changingWIFI) { 
+	    		if(application != null && (state.getUpTime() > Util.ONE_MINUTE))
 	    			application.driverCallServer(PlayerCommands.strobeflash, "on 10 10");
-	    		
-	    		if ((System.currentTimeMillis() - pingLast) > Util.FIVE_MINUTES) {
-	    			Util.log("NetworkMonitor().pingTask() in AP mode for five minutes: " + apModeCounter, null);
-	    			pingLast = System.currentTimeMillis();
-	    			tryAnyConnection();
-	    		} 
-	    		
-	    		return; 
 	    	}
-	    	    			
-    		if((System.currentTimeMillis() - pingLast) > AP_TIME_OUT) {
-    		
-    			// try default 
-    			changeUUID(settings.readSetting(ManualSettings.defaultuuid));
-    			Util.delay(4000);
-    			
-    			// trouble
-    			if((System.currentTimeMillis() - pingLast) > AP_TIME_OUT) panicPings();
-    			
-    			return;
-    		}
-    			
-    		if(state.exists(values.gateway) && !changingWIFI){ 
-    			pingCounter++; // how long connected measure 
-    			if(pingCounter% 100 == 0) Util.debug("NetworkMonitor.pingTask(): ping count = " + pingCounter, null);
+	    	
+	    	if(state.exists(values.gateway) && !changingWIFI){ 
     			pingValue = Util.pingWIFI(state.get(values.gateway));
-    			if(pingValue != null) pingLast = System.currentTimeMillis();
+    			if(pingValue == null) {
+    				
+    				pingFail++;
+    				
+    				Util.log("pingTask(): ping failed: "+ pingFail +" last: " + (System.currentTimeMillis() - pingLast), this);
+    				if(pingFail > 100) {
+    					Util.log("pingTask(): ping failed too much, try adhoc..", this);
+    					disconnecteddWAN();
+    					startAdhoc(); // TODO:.............................. 
+    				}
+    				
+    			} else {
+    				pingLast = System.currentTimeMillis(); 
+    				if(pingFail-- < 0) pingFail = 0;
+    			}
     			
+    			if((System.currentTimeMillis() - apLast) > 100) pingFail = 0;
+	    	}
+	    	
+	    	if((System.currentTimeMillis() - defaultLast) > Util.TWO_MINUTES) {
+	    		Util.log("pingTask(): not connected to default, try to connect.. ", this);
+    			changeUUID(settings.readSetting(ManualSettings.defaultuuid));	
+    			
+	    	}
+    	
+    		if((System.currentTimeMillis() - pingLast) > Util.FIVE_MINUTES) {
+    			Util.log("pingTask(): Start AP mode after 5 minutes disconnected..", this);
+    			startAdhoc();
     		}
+    		
+    		//if(state.exists(values.ssid)){
+	    	// 	currentUUID = lookupUUID(state.get(values.ssid));
+			if(currentUUID != null)
+				if(currentUUID.equals(settings.readSetting(ManualSettings.defaultuuid))) 
+					defaultLast = System.currentTimeMillis();
+    	
+    		if(state.equals(values.ssid, AP)) apLast = System.currentTimeMillis();
+    		
     	}
 	}
 	
@@ -144,17 +142,10 @@ public class NetworkMonitor {
 
 				String line = null;
 				while ((line = procReader.readLine()) != null){
-					
-					if(line.contains("completed")) scanLast = System.currentTimeMillis();
-					
-					if(line.contains("New")) {
-						
-						Util.log(line, this);
-						
-						if( System.currentTimeMillis() - scanLast > Util.TWO_MINUTES) {
-							Util.log(" last scan was: " + ( System.currentTimeMillis() - scanLast ), this);
-							runNetworkTool();
-						}
+					if(line.contains("completed") || line.contains("New")) {
+						// Util.log("[" + ( System.currentTimeMillis() - scanLast ) + "] " + line, this);
+						// scanLast = System.currentTimeMillis();
+						runNetworkTool();
 					}
 				}
 			} catch (Exception e) {
@@ -196,22 +187,6 @@ public class NetworkMonitor {
 		}
 	}
 	
-	private void tryAnyConnection() {	
-		String[] routers = getConnections();
-		if(routers == null) return; 
-		
-		for(int i = 0 ; i < routers.length ; i++) Util.log(i + " tryAnyConnection: " + routers[i], this);
-		
-		String ssid = routers[ new Random().nextInt(routers.length) ];
-		
-		// try not to choose ap mode again
-		if(ssid.equals(AP)) ssid = routers[ new Random().nextInt(routers.length) ];
-		if(ssid.equals(AP)) ssid = routers[ new Random().nextInt(routers.length) ];
-		
-		Util.log("tryAnyConnection: calling changeWIFI(" + ssid + ")", this);
-		changeWIFI(ssid);
-	}
-
 	public boolean connectionExists(final String ssid){
 		for(int i = 0 ; i < (connections.size()) ; i++)
 			if(connections.get(i).startsWith(ssid.trim()))
@@ -220,34 +195,6 @@ public class NetworkMonitor {
 		return false;
 	}
 	
-	public void removeConnection(final String ssid){
-		
-		Util.log("removeConnection(): called with: "+ssid, this);
-		
-		if(changingWIFI){
-			Util.log("removeConnection(): busy, rejected", this);
-			return;
-		}
-		
-		if(ssid.equals(AP)) {
-			Util.log("removeConnection(): can't remove AP", this);
-			return;
-		}
-		
-		if( ! ignore.contains(ssid)) ignore.add(ssid);
-		
-		connectionUpdate();
-	}
-	
-	private void killApplet(){
-		try {
-			Runtime.getRuntime().exec(new String[]{"pkill", "nmcli"});
-			Runtime.getRuntime().exec(new String[]{"pkill", "nm-applet"});
-		} catch (Exception e) {
-			Util.debug("killApplet(): " + e.getLocalizedMessage(), this);
-		}
-	}
-
 	private static String getConnectionName(final String input){
 		String ans = null;
 		String[] line = input.split(" ");
@@ -276,21 +223,44 @@ public class NetworkMonitor {
 	
 	public String[] getConnections() {
 		
-		int size = connections.size();
+		String[] con = new String[connections.size()]; 
+		for(int i = 0 ; i < con.length ; i++)
+			con[i] = NetworkMonitor.getConnectionName(connections.get(i));
 		
-		if(ignore.size() > 0){
-			for(int c = 0 ; c < connections.size() ; c++)
-				if(ignore.contains(NetworkMonitor.getConnectionName(connections.get(c)))) 
-					size--;
-		}
-		
-		String[] con = new String[size]; 
-		for(int i = 0 ; i < con.length ; i++){
-			 if( ! ignore.contains(NetworkMonitor.getConnectionName(connections.get(i))))
-				con[i] = NetworkMonitor.getConnectionName(connections.get(i));
-		}
-	
 		return con;
+	}
+	
+	public void setDefault(final String router) {
+		
+		if(router.equals(AP)) { // TODO: COLIN
+			Util.log("changeWIFI(): user needs to be warned of this something.. ", this);
+		}
+		
+		
+		for(int i = 0 ; i < connections.size() ; i++) {
+			if(connections.get(i).startsWith(router)) {
+				String uuid = getConnectionUUID(connections.get(i));
+				settings.writeSettings(ManualSettings.defaultuuid, uuid);
+			}	
+		}
+	}
+	
+	public String lookupUUID(final String ssid){
+		for(int i = 0 ; i < connections.size() ; i++) {
+			if(connections.get(i).startsWith(ssid)) 
+				return getConnectionUUID(connections.get(i));
+		}
+		
+		return null;
+	}
+	
+	private String lookupSSID(final String uuid){
+		for(int i = 0 ; i < connections.size() ; i++) {
+			if(connections.get(i).contains(uuid)) 
+				return getConnectionName(connections.get(i));
+		}
+		
+		return null;
 	}
 	
 	private void connectionUpdate(){
@@ -301,9 +271,8 @@ public class NetworkMonitor {
 					new InputStreamReader(proc.getInputStream()));
 
 			String line = null;
-			while ((line = procReader.readLine()) != null){  //TODO: revisit 
+			while ((line = procReader.readLine()) != null){                 //TODO: revisit 
 				if( ! line.startsWith("NAME") && line.contains("wireless") && !line.contains("never"))
-					if( ! ignore.contains(NetworkMonitor.getConnectionName(line)))
 						if( ! connections.contains(line))
 							connections.add(line); 
 			}
@@ -314,19 +283,7 @@ public class NetworkMonitor {
 	
 	public void changeWIFI(final String ssid, final String password){
 	
-		if(ssid == null) return; 
-		
-		if(changingWIFI){
-			Util.log("changeWIFI(password): busy, rejected", this);
-			return;
-		}
-		
-		if(state.exists(values.ssid)){
-			if(state.get(values.ssid).equals(ssid)) {
-				Util.log("changeWIFI(password): already is the ssid", this);
-				return;
-			}
-		}
+		if(ssid == null || password == null || changingWIFI) return; 
 		
 		new Thread(){
 		    public void run() {
@@ -334,29 +291,25 @@ public class NetworkMonitor {
 		
 		    		changingWIFI = true;
 		    		disconnecteddWAN();
-		    		killApplet();
-					
-		    		long start = System.currentTimeMillis();
 					String cmd[] = new String[]{"nmcli", "dev", "wifi", "connect", ssid, "password", password};
 					Process proc = Runtime.getRuntime().exec(cmd);
-					
-					BufferedReader procReader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
-
-					String line = null;
-					while ((line = procReader.readLine()) != null)
-						Util.log("changeWIFI(password): stdout: " + ssid + " " + line, this);
-					
 					proc.waitFor();
-					Util.log("changeWIFI(password):" + ssid + " " + (System.currentTimeMillis() - start)/1000 +  " seconds", this); 
 					
-					proc.waitFor();						
-					Util.log("changeWIFI(password): exit code: " + proc.exitValue(), this);
-					Util.log("changeWIFI(password): [" + ssid + "] time: " + (System.currentTimeMillis() - start)/1000 +  " seconds", this);
+					if(proc.exitValue()==4){ // TODO: COLIN tell user 
+						Util.log("changeWIFI(password): [" + ssid + "] exit code: " + proc.exitValue(), this);					
+						Util.log("changeWIFI(password): failed login, bad password so trying default.. ", this);
+		    			changeUUID(settings.readSetting(ManualSettings.defaultuuid));	
+					}
 					
-					Util.delay(400);
-					runNetworkTool();
-					connectionUpdate();
-					changingWIFI = false;
+					if(proc.exitValue()==0) {
+						if(ManualSettings.isDefault(ManualSettings.defaultuuid)) {
+							Util.log("changeWIFI(password): setting as default ["+ssid+"]", this);	
+							connectionUpdate();	
+							setDefault(ssid);	
+						}
+					}
+		
+					changingWIFI = false;		
 					
 		    	} catch (Exception e) {
 					Util.log("changeWIFI(): [" + ssid + "] ", e, this); 
@@ -367,64 +320,58 @@ public class NetworkMonitor {
 
 	public void changeUUID(final String uuid){
 		
-		if(uuid == null) return; 
-		
-		// if((System.currentTimeMillis() - pingLast) <= AP_TIME_OUT) return;
-		
-		if((System.currentTimeMillis() - uuidConnetionLast) <= 4000) {
-			Util.log("changeUUID: busy, rejected: " + (System.currentTimeMillis() - uuidConnetionLast) + " ms too soon", this);
-			return;
-		}
+		if(uuid == null) return;
 		
 		if(changingWIFI){
-			Util.log("changeUUID: busy, rejected", this);
+			Util.debug("changeUUID: busy, rejected", this);
 			return;
 		}
 		
+		if(ManualSettings.isDefault(ManualSettings.defaultuuid)) {
+			Util.log("changeUUID: no default uuid in settings, try adhoc..", this);
+			uuidFail++;
+			startAdhoc();
+			return;
+		}
+		
+		if(uuidFail > 10){
+			Util.log("changeUUID: default router failed 10 times, trying adhoc..", this);
+			settings.writeSettings(ManualSettings.defaultuuid, ManualSettings.getDefault(ManualSettings.defaultuuid));
+			uuidFail = 0;
+			startAdhoc();
+			return;
+		}
+		
+		if(lookupSSID(uuid) == null){
+			Util.log("changeUUID: null connection uuid for ["+lookupSSID(uuid)+"], rejected", this);
+			startAdhoc();
+			uuidFail++;
+			return;
+		}
+	
 		new Thread(){
 		    public void run() {
 		    	try {
 		    		
 		    		changingWIFI = true;
-		    		uuidConnetionAttempts++;
-		    		Util.log("[" +uuidConnetionAttempts + "] changeUUID: " + (System.currentTimeMillis() - uuidConnetionLast) + " ms", this);
-		    		uuidConnetionLast = System.currentTimeMillis();
-		    		
-					long start = System.currentTimeMillis();
-					String cmd[] = new String[]{"nmcli", "c", "up", "uuid", uuid};
-					Process proc = Runtime.getRuntime().exec(cmd);
-					
-					BufferedReader procReader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
-
-					String line = null;
-					while ((line = procReader.readLine()) != null)
-						Util.log("changeUUID: " + uuid + " " + line, this);
-					
+		    		disconnecteddWAN();
+					Process proc = Runtime.getRuntime().exec(new String[]{"nmcli", "c", "up", "uuid", uuid});
 					proc.waitFor();
-					Util.log("changeUUID:" + uuid + " " + (System.currentTimeMillis() - start)/1000 +  " seconds", this); 
 					
-					proc.waitFor();						
-					Util.log("changeUUID: exit code: " + proc.exitValue() + " attempts: " + uuidConnetionAttempts, this);
-					Util.log("changeUUID: [" + uuid + "] time: " + (System.currentTimeMillis() - start)/1000 +  " seconds", this);
+					Util.log("changeUUID: [" + lookupSSID(uuid) + "] exit code: " + proc.exitValue(), this);
 					
-					if( proc.exitValue() == 0){
-						
-						Util.delay(3000);
-							
-						runNetworkTool();
-						pingLast = System.currentTimeMillis();
-						Util.log("changeUUID: connection up.. ", this);
-						//changingWIFI = false;	
+					if(proc.exitValue()==3) {	
+						uuidFail++;
+						Util.log( uuidFail + " changeUUID: timeout, try adhoc: " + proc.exitValue(), this);
+						startAdhoc();
 						return;
-						
 					}
 					
-					//Util.delay(3000);
-					//runNetworkTool();
-					changingWIFI = false;
+					if(proc.exitValue()==0) runNetworkTool();
+					changingWIFI = false;	
 					
 		    	} catch (Exception e) {
-					Util.log("changeUUID(): [" + uuid + "] ", e, this); 
+					Util.log("changeUUID(): [" + uuid + "]: ", e, this); 
 				}
 		    }
 		}.start();
@@ -432,80 +379,74 @@ public class NetworkMonitor {
 
 	public void changeWIFI(final String ssid){
 		
-		if(ssid == null) return; 
+		if(ssid == null || changingWIFI) return; 
 		
-		if(changingWIFI){
-			Util.log("changeWIFI(): busy, rejected", this);
+		if(state.equals(values.ssid, ssid)) {
+			
+			Util.debug("changeWIFI(): already is the ssid: " + ssid, this);
+			
+			if(ssid.equals(AP) && ManualSettings.isDefault(ManualSettings.defaultuuid)){
+				Util.log("changeWIFI(): ..... all hope is lost, user needs to do something..... ", this);
+			}// TODO: COLIN
+			
 			return;
 		}
-		
-		if(state.exists(values.ssid)){
-			if(state.get(values.ssid).equals(ssid)) {
-				Util.log("changeWIFI(): already is the ssid", this);
-				return;
-			}
-		}
-		
-		changingWIFI = true;
-		disconnecteddWAN();
-		killApplet();
-		
-		Util.log("changeWIFI(): switch to ssid = " + ssid, this);
 		
 		new Thread(){
 		    public void run() {
 		    	try {
-
-		    		long start = System.currentTimeMillis();                        // TODO: spaces in ssid? 
+	
+		    		changingWIFI = true;	
+		    		disconnecteddWAN();
 					Process proc = Runtime.getRuntime().exec(new String[]{"nmcli", "c", "up", "id", ssid}); // "\""+ssid+"\"" }); 
-					
-					BufferedReader procReader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
-
-					String line = null;
-					while ((line = procReader.readLine()) != null)
-						Util.log("changeWIFI(): stdout: " + ssid + " " + line, this);
-					
-					procReader = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
-					while ((line = procReader.readLine()) != null){
-						Util.log("changeWIFI(): error: " + ssid + " " + line, this);
-						
-						if(line.toLowerCase().contains("timeout")){
-							if(failedConnetion++ >= 3){
-								Util.log("changeWIFI(): timeout counter = " + failedConnetion, this);
-								pingLast = System.currentTimeMillis();
-								startAdhoc();
-							}
-						}
+					proc.waitFor();
+					Util.log("changeWIFI(): [" + ssid + "] exit code: " +  proc.exitValue(), this);
+					if(proc.exitValue()==0) {
+						if(ManualSettings.isDefault(ManualSettings.defaultuuid))
+							if( ! state.equals(values.ssid, AP)) 
+								setDefault(ssid);
 					}
 					
-					proc.waitFor();
-					Util.log("changeWIFI(): exit code: " + proc.exitValue(), this);
-					Util.log("changeWIFI(): [" + ssid + "] time: " + (System.currentTimeMillis() - start)/1000 +  " seconds", this);
-					
-					Util.delay(400);
 					runNetworkTool();
-					connectionUpdate();
-					changingWIFI = false;
+					changingWIFI = false;	
 					
-				} catch (Exception e) {
+		    	} catch (Exception e) {
 					Util.log("changeWIFI(): [" + ssid + "] exception: ", e, this); 
 				}
 		    }
 		}.start();
 	}
-
+	
+	private void killApplet(){
+		try {
+			Runtime.getRuntime().exec(new String[]{"pkill", "nmcli"});
+			Runtime.getRuntime().exec(new String[]{"pkill", "nm-applet"});
+		} catch (Exception e) {
+			Util.debug("killApplet(): " + e.getLocalizedMessage(), this);
+		}
+	}
+	
 	public void startAdhoc(){
-		
+
 		if(changingWIFI){
-			Util.log("changeWIFI(): busy, rejected", this);
-			return;
+			if( adhocBusy++ > 10) {
+				
+				Util.log("startAdhoc(): break through, reset busy flag.", this);
+				changingWIFI = false;
+				adhocBusy = 0;
+				
+			} else {
+				Util.log("startAdhoc(): busy, rejected: " + adhocBusy, this);
+				return;
+			}
 		}
 		
 		if(getAccessPoints() == null){
-			Util.log("... no access points, can't be an ap.", this);
+			Util.log("startAdhoc(): no access points, can't be an an access point.", this);
 			return;
 		}
 		
+		changingWIFI = false;
 		changeWIFI(AP);
 	}
 
@@ -514,16 +455,10 @@ public class NetworkMonitor {
 	}
 
 	private void setSSID(final String line) {
-		if(line.contains("[") && line.contains("]")){
-			
-			if(wdev==null){
-				wdev = line.substring(line.indexOf("wlan"), line.indexOf(" [")).trim();
-				Util.log("wedv: " +wdev, this);
-			}
-			
+		if(line.contains("[") && line.contains("]")){	
+			if(wdev==null) wdev = line.substring(line.indexOf("wlan"), line.indexOf(" [")).trim();
 			String router = line.substring(line.indexOf("[")+1, line.indexOf("]"));
-			if( ! state.equals(values.ssid, router))
-				state.set(values.ssid, router);
+			if( ! state.equals(values.ssid, router)) state.set(values.ssid, router);
 		}
 	}
 
@@ -539,9 +474,6 @@ public class NetworkMonitor {
 				}
 			}
 		}
-
-		//	Util.debug("readWAN(): " + wlanData.size(), this);
-		//	for(int i = 0 ; i < wlanData.size() ; i++) Util.debug("wlanData: " + i + " " + wlanData.get(i));
 	}
 
 	private void readETH() {
@@ -555,25 +487,14 @@ public class NetworkMonitor {
 				}
 			}
 		}
-
-		//	Util.debug("readETH: " + ethData.size(), this);
-		//	for(int i = 0 ; i < ethData.size() ; i++) Util.debug("readETH: " + i + " " + ethData.get(i), this);
 	}
 
 	private void disconnecteddWAN(){
+		killApplet();
 		state.delete(values.ssid);
 		state.delete(values.localaddress);
 		state.delete(values.signalspeed);
 		state.delete(values.gateway);
-		
-		// externalLookup = 0;
-		
-		apModeCounter = 0;
-		pingCounter = 0;
-		pingValue = "0"; 
-		pingFails = 0;
-		
-		// wdev = null;
 	}
 
 	private void parseETH(){
@@ -596,10 +517,8 @@ public class NetworkMonitor {
 			
 			if(line.contains("Address: ") && !line.startsWith("HW")){
 				String addr = line.substring(line.indexOf("Address: ")+9).trim();
-				// Util.debug("parseETH: address: " + addr, this);
 				if(Util.validIP(addr)){
-					if( ! state.exists(values.ethernetaddress)) state.set(values.ethernetaddress, addr);
-					
+					if( ! state.exists(values.ethernetaddress)) state.set(values.ethernetaddress, addr);					
 					if( state.exists(values.ethernetaddress)){
 						if( ! state.equals(values.ethernetaddress, addr)){
 							state.set(values.ethernetaddress, addr);
@@ -611,26 +530,16 @@ public class NetworkMonitor {
 	}
 
 	private void parseWLAN(){
-
-		// 	Util.debug("parseWLAN: " + wlanData.size(), this);
-
-		boolean star = false;
-
 		for(int i = 0 ; i < wlanData.size() ; i++){
 
 			String line = wlanData.get(i).trim();
 
-			if(line.startsWith("*")) {
-				line = line.substring(1);
-				star = true;
-			}
-			
+			if(line.startsWith("*")) line = line.substring(1);
+	
 			if(isSSID(line) && ! accesspoints.contains(line)) accesspoints.add(line);
 
 			if(line.contains("Speed: ")){
-
 				String speed = line.substring(line.indexOf("Speed: ")+7).trim();
-				// Util.debug("parseWLAN: speed: " + speed, this);
 				if( ! state.exists(values.signalspeed)) state.set(values.signalspeed, speed);
 				if(state.exists(values.signalspeed))
 					if( ! state.equals(values.signalspeed, speed))
@@ -638,13 +547,9 @@ public class NetworkMonitor {
 			}
 
 			if(wlanData.get(i).startsWith("Address: ")){
-
-				String addr = line.substring(line.indexOf("Address: ")+9).trim();
-				// Util.debug("parseWLAN: addr: " + addr, this);	
+				String addr = line.substring(line.indexOf("Address: ")+9).trim();	
 				if(Util.validIP(addr)){
-
-					if( ! state.exists(values.localaddress)) state.set(values.localaddress, addr);
-					
+					if( ! state.exists(values.localaddress)) state.set(values.localaddress, addr);					
 					if(state.exists(values.localaddress)){
 						if( ! state.equals(values.localaddress, addr)){
 							state.set(values.localaddress, addr);
@@ -654,9 +559,7 @@ public class NetworkMonitor {
 			}
 
 			if(line.startsWith("Gateway: ")){
-
 				String gate = line.substring(line.indexOf("Gateway: ")+9).trim();
-				// Util.debug("parseWLAN: gate: " + gate, this);
 				if(Util.validIP(gate)){
 					
 					if( ! state.exists(values.gateway)) state.set(values.gateway, gate);
@@ -670,40 +573,30 @@ public class NetworkMonitor {
 			}
 			
 			if(line.startsWith("State: ")){
-				
 				String state = line.substring(line.indexOf("State: ")+7).trim();
 				if(state.equals("disconnected")){
-				
-					Util.log("parseWLAN: disconnected ... State: " + state, this);
+					Util.log("nm-tool.. disconnected, state: " + state, this);
 					disconnecteddWAN();
-					
 				}
 			}	
 		}
-		
-		if(!star) {
-			Util.debug("nm-tool.. disconnected? no star", this);
-			disconnecteddWAN();
-		}
-		
 	}
 	
 	public String[] getAccessPoints(){
+		
 		Vector<String> aps = new Vector<String>();
 		for(int j = 0 ; j < accesspoints.size() ; j++) {
 			if(accesspoints.get(j).contains(":")){
 				String ssid = accesspoints.get(j).substring(0, accesspoints.get(j).indexOf(":")).trim();
-				if( ! aps.contains(ssid) && ! connectionExists(ssid)) aps.add(ssid);
+				if( ! aps.contains(ssid) && ! connectionExists(ssid)) //&& ! ignore.contains(ssid)) 
+					aps.add(ssid);
 			}
 		}
 
-		int r = 0; // copy results
+		int r = 0; 
 		String[] result = new String[aps.size()];
 		for(int j = 0 ; j < aps.size() ; j++)
 			result[r++] = aps.get(j);
-
-		// Util.debug("getAccessPoints(): found [" + result.length + "] wifi routers", this);
-		// for(int i = 0; i < result.length ; i++) Util.debug((result[i]));
 
 		return result;
 	}
@@ -729,26 +622,13 @@ public class NetworkMonitor {
 			}
 		} }).start();
 	}
-
+	
 	public String getPingTime() {
-		return pingValue;
+		return 	" a: " + (System.currentTimeMillis()-apLast)/1000 + " d: " + (System.currentTimeMillis()-defaultLast)/1000 ; 
+		// TODO: fix later 
+		//pingValue;
 	}
-
-	public void setDefault(final String router) {
-		
-		Util.debug("target connction id: "+router, this);
-		
-		for(int i = 0 ; i < connections.size() ; i++) {
-			if(connections.get(i).startsWith(router)) {
-				String uuid = getConnectionUUID(connections.get(i));
-				if( ! settings.readSetting(ManualSettings.defaultuuid).equals(uuid)){
-					settings.writeSettings(ManualSettings.defaultuuid, uuid);
-					Util.log("writesetting: " + router + " =uuid= " + uuid, this);
-				}
-			}	
-		}
-	}
-		
+	
 	public long getLastPing() {
 		return pingLast;
 	}
@@ -760,6 +640,8 @@ public class NetworkMonitor {
 	public boolean wiredConnectionActive(){
 		return wiredConnection;
 	}
+	
+
 	
 	/*
 	public class TelnetTask extends TimerTask {
